docs/css/index.css
/* ... */
.content {
  display: flex;
  align-items: center;
  justify-content: center;
  position: relative;
  margin-inline: auto;
}

.content div {
  position: absolute;
  display: flex;
  animation: show-hide var(--sp) ease 0s infinite;
  mix-blend-mode: plus-lighter;
}

@keyframes show-hide {
  0%,
  100% {
    opacity: 0;
    transform: scale(0.0);
  }
  20%,
  100% {
    opacity: 1;
    transform: scale(2.5);
  }
}

.content div span {
  width: 7vmin;
  position: relative;
  text-align: center;
  box-sizing: border-box;
  color: var(--text-color);
  font-size: var(--step-0);
}

.content-1 {
  display: flex;
  align-items: center;
  justify-content: center;
  position: relative;
  margin-inline: auto;
}

.content-1 div {
  position: absolute;
  display: flex;
  animation: show-hide var(--sp) ease 0s infinite;
  mix-blend-mode: plus-lighter;
}

@keyframes show-hide {
  0%,
  100% {
    opacity: 0;
    transform: scale(0.4);
  }
  20%,
  80% {
    opacity: 1;
    transform: scale(1.4);
  }
}

.content-1 div span {
  width: 7vmin;
  position: relative;
  text-align: center;
  box-sizing: border-box;
  color: var(--text-color);
  font-size: var(--step-0);
}

.down:before {
  /* Wide shadow */
  width: 80%;
  height: 0.5vmin;
  background: radial-gradient(ellipse at 50% 50%, var(--base-color), #ffffff 80%);
  content: "";
  position: absolute;
  border-radius: 100%;
  filter: blur(2px);
  left: 10%;
  top: 49%;
  box-shadow: 0 0 100px 0 var(--base-color);
  animation: shadow var(--sp) ease 0s infinite;
}

.down:after {
  /* Small focused shadow */
  width: 1vmin;
  height: 0.5vmin;
  content: "";
  position: absolute;
  filter: blur(2px);
  left: calc(50% - 0.5vmin);
  top: 45%;
  box-shadow: 0 0 100px 0 var(--base-color);
  animation: shadow var(--sp) ease 0s infinite;
}

@keyframes shadow {
  0%,
  10%,
  90%,
  100% {
    opacity: 0;
  }
  45%,
  55% {
    opacity: 0.25;
    height: 0.25vmin;
  }
}

.up span,
.down span {
  animation-duration: var(--sp);
  animation-timing-function: ease;
  animation-delay: 0s;
  animation-iteration-count: infinite;
}

/*up*/
.up-2-8 {
  animation-name: go-up-2-8;
}

.up-3-7 {
  animation-name: go-up-3-7;
}

.up-4-6 {
  animation-name: go-up-4-6;
}

.up-5 {
  animation-name: go-up-5;
}

/*down*/
.down-2-8 {
  animation-name: go-down-2-8;
}

.down-3-7 {
  animation-name: go-down-3-7;
}

.down-4-6 {
  animation-name: go-down-4-6;
}

.down-5 {
  animation-name: go-down-5;
}

@keyframes go-up-2-8 {
  0%,
  10%,
  90%,
  100% {
    top: 0;
  }
  40%,
  60% {
    top: -1vmin;
  }
}

@keyframes go-up-3-7 {
  0%,
  10%,
  90%,
  100% {
    top: 0;
  }
  40%,
  60% {
    top: -2vmin;
  }
}

@keyframes go-up-4-6 {
  0%,
  10%,
  90%,
  100% {
    top: 0;
  }
  40%,
  60% {
    top: -2.5vmin;
  }
}

@keyframes go-up-5 {
  0%,
  10%,
  90%,
  100% {
    top: 0;
  }
  40%,
  60% {
    top: -3.5vmin;
  }
}

@keyframes go-down-2-8 {
  0%,
  10%,
  90%,
  100% {
    top: 0;
  }
  40%,
  60% {
    top: 1vmin;
  }
}

@keyframes go-down-3-7 {
  0%,
  10%,
  90%,
  100% {
    top: 0;
  }
  40%,
  60% {
    top: 2vmin;
  }
}

@keyframes go-down-4-6 {
  0%,
  10%,
  90%,
  100% {
    top: 0;
  }
  40%,
  60% {
    top: 2.5vmin;
  }
}

@keyframes go-down-5 {
  0%,
  10%,
  90%,
  100% {
    top: 0;
  }
  40%,
  60% {
    top: 3.5vmin;
  }
}

.text-container {
  color: var(--text-color);
  margin-top: var(--space-2xl);
  word-spacing: var(--space-xs);
  user-select: none;
  overflow: hidden;
  text-align: center;
  z-index: 1000;
}

.text-with-animation {
  font-family: var(--font-primary), sans-serif;
  margin-block: var(--space-2xs);
  font-size: var(--step-4);
  font-style: italic;
  /* Makes text slanted */
}

.text-with-animation-1,
.text-with-animation-2 {
  font-family: var(--font-secondary), sans-serif;
  font-style: normal;
  font-weight: normal;
  text-align: center;
  font-size: var(--step-2);
  padding-block: var(--space-3xs);
}

.large-button {
  position: relative;
  margin-top: var(--space-l);
  margin-inline: auto;
  z-index: 3000;
  isolation: isolate;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  text-decoration: none;
  background-color: transparent;
  color: var(--text-color);
  border-radius: 50%;
  box-shadow: 0 10px 10px 0 var(--text-color);
  transition: box-shadow 0.3s, outline 0.3s;
  overflow: hidden;
  width: min(20rem, 85vw);
  height: min(11rem, 55vw);
  text-align: center;
  user-select: none;
  cursor: pointer;
  pointer-events: all;
}

.large-button:focus,
.large-button:hover {
  box-shadow: 0 0 30px 10px var(--text-span);
  outline: 6px solid var(--text-span);
}

.large-button span {
  margin-top: var(--space-2xs);
  background-color: transparent;
  transition: box-shadow 0.3s, outline 0.3s;
  text-align: center;
  color: var(--text-color);
  user-select: none;

}

.large-button svg {
  fill: var(--text-color);
  width: var(--space-xl);
  height: var(--space-xl);
  transition: transform 0.3s, box-shadow 0.3s;
  display: block;
  margin-inline: auto;
  user-select: none;
  pointer-events: none;
}

.large-button:hover>svg,
.large-button:focus>svg {
  fill: var(--text-span);
  transform: scale(0.6) rotate(45deg);
  transition: transform 0.1s, box-shadow 0.3s color 0.3s;
}


@media (prefers-reduced-motion: reduce) {

  .content div,
  .content-1 div {
    animation: none;
  }

  .down:before,
  .up:before {
    animation: none;
  }

  .large-button:hover>svg,
  .large-button:focus>svg {
    transform: none;
  }
}

